--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build --base=/goit-markup-hw-11/",
+    "start": "vite",
+    "build": "vite build --base=/goit-js-hw-12/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -15,7 +15,7 @@
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "flatpickr": "^4.6.13",
+    "axios": "^1.6.8",
     "izitoast": "^1.4.0",
     "simplelightbox": "^2.14.2",
     "vite-plugin-full-reload": "^1.0.5",
